<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/formulario_alunos_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_aluno_nome"
            android:inputType="textCapWords" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/formulario_alunos_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_aluno_nascimento"
            android:inputType="date" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:visibility="gone"                                              
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/formulario_alunos_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_aluno_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/formulario_alunos_cadastrar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@color/colorBtnGreen"
        android:text="@string/formulario_aluno_btn"
        android:textColor="@color/colorWhite" />


</LinearLayout>
