<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/formulario_prova_materia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_prova_materia" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/formulario_prova_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_prova_data" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/formulario_prova_cadastrar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@color/colorBtnGreen"
        android:text="@string/formulario_prova_btn"
        android:textColor="@color/colorWhite" />


</LinearLayout>